major rework: build cfn template with Ruby instead of ERB for new features
* codified iam_role support with .ufo/iam_roles files: custom and
managed policy support
* allow per service security groups
* use conventional .ufo/settings cfn and network files based on ufo env
* managed_security_groups_enabled=false setting.yml
* update cfn/default to use CamelCase. maintain backward compatibility
with underscore
* project custom helper methods support
* remove pretty option: always pretty
* add image-override option

--- a/docs/_includes/subnav.html
+++ b/docs/_includes/subnav.html
@@ -25,6 +25,7 @@
                 </li>
                 <li><a href="{% link _docs/variables.md %}">Shared Variables</a></li>
                 <li><a href="{% link _docs/helpers.md %}">Helpers</a></li>
+                <li><a href="{% link _docs/iam-roles.md %}">IAM Roles</a></li>
                 <li><a href="{% link _docs/conventions.md %}">Conventions</a></li>
                 <li><a href="{% link _docs/ufo-logs.md %}">Ufo Logs</a></li>
                 <li><a href="{% link _docs/ufo-env.md %}">Ufo Env</a></li>
@@ -44,6 +45,7 @@
                 <li><a href="{% link _docs/extras/minimal-deploy-iam.md %}">Minimal Deploy IAM</a></li>
                 <li><a href="{% link _docs/extras/codebuild-iam-role.md %}">CodeBuild IAM Role</a></li>
                 <li><a href="{% link _docs/extras/dockerfile-erb.md %}">Dockerfile.erb</a></li>
+                <li><a href="{% link _docs/extras/notification-arns.md %}">Notification Arns</a></li>
             </ul>
         </li>
         <li><a href="{% link _docs/upgrading.md %}">Upgrading</a>
