--- a/lib/template/.ufo/settings/cfn/default.yml.tt
+++ b/lib/template/.ufo/settings/cfn/default.yml.tt
@@ -3,38 +3,38 @@
 # CloudFormation. These options are inserting into the generated template.
 # More info: https://ufoships.com/docs/customize-cloudformation
 
-elb:
-  scheme: internet-facing
+Elb:
+  Scheme: internet-facing
 
 # https://docs.aws.amazon.com/fr_fr/elasticloadbalancing/latest/APIReference/API_CreateTargetGroup.html
 #
 # When using SSL with network elb, the target group protocol is usually http still
 # unless you also handle SSL termination at the app level.
-target_group:
-  port: 80 # only used with ECS if awsvpc mode
-  # protocol: TCP # valid values - application elb: HTTP HTTPS, network elb: TCP
+TargetGroup:
+  Port: 80 # only used with ECS if awsvpc mode
+  # Protocol: TCP # valid values - application elb: HTTP HTTPS, network elb: TCP
                   # ufo sets defaults in cloudformation template
                   #   application elb: HTTP
                   #   network elb: TCP
                   # so we can keep this commented out, unless we need HTTPS at the app level
   # Health check settings are supported by application load balancer only:
-  # health_check_path: /up # health check
-  health_check_interval_seconds: 10 # default: 30. Network ELB can only take 10 or 30
-  healthy_threshold_count: 2
-  unhealthy_threshold_count: 2 # default: 10
-  # health_check_protocol: HTTP # HTTP or HTTPS
-  # health_check_port: traffic-port
-  target_group_attributes:
-  - key: deregistration_delay.timeout_seconds
-    value: 10
+  # HealthCheckPath: /up # health check
+  HealthCheckIntervalSeconds: 10 # default: 30. Network ELB can only take 10 or 30
+  HealthyThresholdCount: 2
+  UnhealthyThresholdCount: 2 # default: 10
+  # HealthCheckProtocol: HTTP # HTTP or HTTPS
+  # HealthCheckPort: traffic-port
+  TargetGroupAttributes:
+  - Key: deregistration_delay.timeout_seconds
+    Value: 10
 
 # https://docs.aws.amazon.com/fr_fr/elasticloadbalancing/latest/APIReference/API_CreateListener.html
 #
 # This is the default listener and normally should listen to port 80.
-listener:
-  port: 80
+Listener:
+  Port: 80
   # For Application Load Balancers, the supported protocols are HTTP and HTTPS. For Network Load Balancers, the supported protocol is TCP.
-  # protocol: TCP # valid values - application elb: HTTP HTTPS, network elb: TCP, TLS
+  # Protocol: TCP # valid values - application elb: HTTP HTTPS, network elb: TCP, TLS
                   # ufo sets these defaults:
                   #   application elb: HTTP  # unless port is 443
                   #   application elb: HTTPS # if port is 443
@@ -43,8 +43,8 @@ listener:
                   # Can keep protocol commented out,
                   # unless need to override the defaults.
   # If using the listener to handle SSL
-  # certificates:
-  # - certificate_arn: arn:aws:acm:us-east-1:111111111111:certificate/11111111-2222-3333-4444-555555555555
+  # Certificates:
+  # - CertificateArn: arn:aws:acm:us-east-1:111111111111:certificate/11111111-2222-3333-4444-555555555555
 
 # An optional second listener can be created.
 # If HTTPS and SSL is required then the listener_ssl config is what you should use.
@@ -53,11 +53,11 @@ listener:
 #   to handle SSL termination.
 #
 # ufo creates an ssl listener when listener_ssl is set.
-# listener_ssl:
-#   port: 443
-#   # certificates:
-#   # - certificate_arn: arn:aws:acm:us-east-1:111111111111:certificate/11111111-2222-3333-4444-555555555555
-#   # protocol: TCP # valid values - application elb: HTTP HTTPS, network elb: TCP, TLS
+# ListenerSsl:
+#   Port: 443
+#   # Certificates:
+#   # - CertificateArn: arn:aws:acm:us-east-1:111111111111:certificate/11111111-2222-3333-4444-555555555555
+#   # Protocol: TCP # valid values - application elb: HTTP HTTPS, network elb: TCP, TLS
 #                   # ufo handles setting the defaults:
 #                   #   application elb: HTTPS
 #                   #   network elb: TLS
@@ -66,7 +66,7 @@ listener:
 # Note, the route53 record set for the domain name must already exist.
 # The {stack_name} variable gets replaced with the name of the CloudFormation stack name.
 # Example: {stack_name} => demo-web
-# dns:
-#   name: "{stack_name}.yourdomain."
-#   hosted_zone_name: yourdomain. # dont forget the trailing period
+# Dns:
+#   Name: "{stack_name}.yourdomain."
+#   HostedZoneName: yourdomain. # dont forget the trailing period
 #   TTL: '60' # ttl has special upcase casing
