--- a/docs/_includes/subnav.html
+++ b/docs/_includes/subnav.html
@@ -25,6 +25,7 @@
                 </li>
                 <li><a href="{% link _docs/variables.md %}">Shared Variables</a></li>
                 <li><a href="{% link _docs/helpers.md %}">Helpers</a></li>
+                <li><a href="{% link _docs/secrets.md %}">Secrets</a></li>
                 <li><a href="{% link _docs/iam-roles.md %}">IAM Roles</a></li>
                 <li><a href="{% link _docs/conventions.md %}">Conventions</a></li>
                 <li><a href="{% link _docs/ufo-logs.md %}">Ufo Logs</a></li>
