--- a/lib/template/.ufo/variables/base.rb.tt
+++ b/lib/template/.ufo/variables/base.rb.tt
@@ -2,6 +2,7 @@
 # More info on how variables work: http://ufoships.com/docs/variables/
 @image = helper.full_image_name # includes the git sha tongueroo/demo-ufo:ufo-[sha].
 @environment = helper.env_file(".env")
+@secrets = helper.secrets_file(".secrets")
 <% if @options[:launch_type] == "fargate" -%>
 # Ensure that the cpu and memory values are a supported combination by Fargate.
 # More info: https://docs.aws.amazon.com/AmazonECS/latest/developerguide/task-cpu-memory-error.html"
