--- a/lib/template/.ufo/settings.yml.tt
+++ b/lib/template/.ufo/settings.yml.tt
@@ -12,8 +12,8 @@ base:
   # There are some cavaets with this. Updating properties on resources that require
   # replacment might not work. For example, adding and removing a load balancer.
   # In these cases, you must delete the entire ecs service and recreate it.
-  stack_naming: append_env
-  auto_camelize: false # new default setting in ufo v5
+  stack_naming: append_ufo_env # new default setting in ufo v5.0.6
+  auto_camelize: false         # new default setting in ufo v5
 
 development:
   # cluster: development
