--- a/docs/_layouts/default.html
+++ b/docs/_layouts/default.html
@@ -2,10 +2,12 @@
 <html>
     {% include head.html %}
     <body id="page-top" class="index">
+    {% include banner/head.html %}
     {% include nav.html %}
     {% include content.html %}
     {% include footer.html %}
     {% include modals.html %}
+    {% include banner/foot.html %}
     {% include js.html %}
     </body>
 </html>
