update docs links

--- a/lib/templates/init/.ufo/config.rb.tt
+++ b/lib/templates/init/.ufo/config.rb.tt
@@ -4,36 +4,36 @@ Ufo.configure do |config|
   config.docker.repo = "<%= @repo %>"
   # config.ecs.cluster = ":ENV" # :ENV pattern is replaced with UFO_ENV. Default is UFO_ENV=dev
 
-  # See VPC Docs: https://ufoships.com/docs/config/vpc/
+  # VPC Docs: https://ufoships.com/docs/config/vpc/
   # When not set, it's assumed that the ECS cluster using default vpc and default subnets.
   # Notice the ability to use `stack_output` helpers to set the values.
   # config.vpc.id = stack_output("vpc-:ENV.Vpc")
   # config.vpc.subnets.ecs = stack_output("vpc-:ENV.PrivateAppSubnets").split(',')
   # config.vpc.subnets.elb = stack_output("vpc-:ENV.PublicSubnets").split(',')
 
-  # See AutoScaling Docs: https://ufoships.com/docs/features/autoscaling/
+  # AutoScaling Docs: https://ufoships.com/docs/features/autoscaling/
   # config.autoscaling.enabled = true
   # config.autoscaling.min_capacity = 2
   # config.autoscaling.max_capacity = 3
   # config.autoscaling.target_value = 50.0
 
-  # See Route DNS Docs: https://ufoships.com/docs/features/dns-route53-support/
+  # Route DNS Docs: https://ufoships.com/docs/features/dns-route53-support/
   # config.dns.domain = "domain.com"
 
-  # See ufo exec Docs: https://ufoships.com/docs/intro/ufo-exec/
+  # Ufo exec Docs: https://ufoships.com/docs/intro/ufo-exec/
   # bash is default but may not be available your Docker image
   # Configure to /bin/sh if needed
   # config.ecs.default_execute_command = "/bin/bash"
 
-  # See: https://ufoships.com/docs/config/reference/
+  # Docs: https://ufoships.com/docs/config/reference/
   # config.ps.summary = false # false to turn off the summary at top of ufo ps output
   # config.ps.format = "table" # Examples: csv table tab json
 
-  # See: https://ufoships.com/docs/config/reference/
+  # Docs: https://ufoships.com/docs/config/reference/
   # Note: the `-` (minus sign) in front rejects the pattern
   # config.logs.filter_pattern = '- "HealthChecker"'
 
-  # See: https://ufoships.com/docs/config/reference/
+  # Docs: https://ufoships.com/docs/config/reference/
   # You may want to set to false if your docker build and push process takes a while
   # config.ship.docker.quiet = false # default is true.
 end
